<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <!-- The main content -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/projectPage"
        android:fillViewport="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/projectPageLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_weight="1">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:hint="@string/projectName"
                        android:text="@string/projectName"
                        android:id="@+id/projectName"/>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saveProject"
                    android:id="@+id/saveProject"
                    android:clickable="true"
                    android:onClick="onSaveProject"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/convertToJava"
                    android:id="@+id/convertTOJava"
                    android:onClick="convertToJava"
                    android:layout_weight="0.5" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    
    <!-- Sliding Panel Content-->
    <!-- The width of the sliding panel should be specified in dp-->
    <LinearLayout
        android:id="@+id/slidingMenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#ffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="7">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectAll"
                    android:id="@+id/selectAll"
                    android:layout_weight="0.5"
                    android:onClick="selectAll" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deselectAll"
                    android:id="@+id/deselectAll"
                    android:layout_weight="0.5"
                    android:onClick="deselectAll" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewClass"
                    android:id="@+id/viewClass"
                    android:onClick="viewClass" />


            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/classList"
                    android:padding="5dp">


                </LinearLayout>
            </ScrollView>


        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:baselineAligned="false"
            android:layout_weight="2"
            android:padding="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addClass"
                android:id="@+id/addClass"
                android:onClick="addClass"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteClass"
                android:id="@+id/deleteClass"
                android:layout_weight="1"
                android:onClick="deleteSelectedClasses" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>